# mattermost-cursor-claude

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mattermost_cursor/: __main__.py  config.py  provider.py
mattermost_cursor/approval/: http_server.py  manager.py
mattermost_cursor/bot/: app.py  thread_queue.py
mattermost_cursor/claude/: __init__.py  agent_session.py  client.py  create_agent.py
mattermost_cursor/cursor/: agent_context.py  agent_runner.py  client.py  create_agent.py  mcp_servers.py  run_status.py  stream_sink.py  tool_markdown.py
mattermost_cursor/gitlab/: mr_policy.py
mattermost_cursor/history/: __init__.py  base.py  factory.py  models.py  sql_store.py  store.py  types.py
mattermost_cursor/mattermost/: api.py  buffer_region.py  message_format.py  post_utils.py  stream_buffer.py  streaming_post.py  thread_context.py  types.py  websocket.py
mattermost_cursor/openai/: chat_completions.py  messages.py  responses.py  server.py  sessions.py  sse.py
mattermost_cursor/panel/: auth.py  server.py  ui.py
mattermost_cursor/util/: expand_env.py  logger.py  server.py
