[project]
name = "mattermost-cursor"
version = "1.0.0"
description = "Mattermost bot that runs Cursor or Claude agents with GitLab, Jira, Confluence, and optional Figma MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "ISC" }
dependencies = [
    "cursor-sdk>=0.1.6",
    "claude-agent-sdk>=0.2.88",
    "aiohttp>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncmy>=0.2.9",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]

[project.scripts]
mattermost-cursor = "mattermost_cursor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mattermost_cursor"]

[tool.ruff]
line-length = 100
target-version = "py311"
